# challenge

./: .gitignore  game.json
.github/workflows/: build-and-deploy.yaml
code/: .env  Cargo.toml  Dockerfile  README.md  Trunk.toml  bun.lockb  index.html  input.css  package-lock.json  package.json  vite.config.ts
code/src/: App.tsx  app.rs  app.tsx  entry-server.tsx  lib.rs  main.rs
code/src/components/: computer.rs  game.rs  game_info_dialog.rs  keyboard.rs  mod.rs  session.rs  stats_dialog.rs  tile.rs  word.rs
code/src/components/game/: context.tsx  game.tsx  model.tsx  service.tsx  view.tsx
code/src/components/game_info_dialog/: dialog.tsx
code/src/components/info_dialog/: dialog.tsx
code/src/components/keyboard/: key.tsx  keyboard.tsx
code/src/components/session/: context.tsx  model.tsx  service.tsx  session.tsx  view.tsx
code/src/components/share/: dialog.tsx
code/src/components/tiles/: tiles.tsx
code/src/routes/: index.tsx  multi.tsx  share.tsx
code/src/util/: service.ts  words.ts
code/src/views/: index.rs
code/style/: index.css  output.css
data/: main.go
data/data/: challenge_dict.csv  valid_words.csv  valid_words.json
docs/: spec.md
iac/: blue-green.bash  challenge.stack.yaml
research/: main.go
research/data/: challenge_dict.csv  formatter.go  wiki-formatted.csv
