[package]
name = "challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos-use = { version=  "0.8.2", features = ["storage"] }
web-sys = { version = "0.3.65", features = ["Navigator", "Window", "ShareData"] }
reqwasm = "0.5"
serde = "1.0.193"
chrono = "0.4.31"
chrono-tz = "0.5"
csv = "1.3.0"
rand = "0.8.5"

[package.metadata]
cfg=["web_sys_unstable_apis"]